soluciona error en el renderizado

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    estoy funcionando
+  
+  {% block content %}
+      
+  {% endblock%}
+    
 </body>
 </html>
