agrega modelo Ganador y lógica de sorteo en la vista

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,19 @@
 </head>
 <body>
   base funcionando
-  {% block content %}
+    <section id="participantess">
+        {% block content %}
       
-  {% endblock%}
+        {% endblock%}
+    </section>
+  
+    <section id="sorteo">
+        {% block content2 %}
+      
+        {% endblock%}
+    </section>
+  
+  
     
 </body>
 </html>
