--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="{% static 'js/script.js' %}"></script>
+    <title>sorteador</title>
 </head>
 <body>
-  base funcionando
-    <section id="participantess">
-        {% block content %}
-      
-        {% endblock%}
-    </section>
-  
-    <section id="sorteo">
-        {% block content2 %}
-      
-        {% endblock%}
-    </section>
-  
-  
-    
+    <div class="container py-5">
+        <h1 class="text-center mb-5">Panel de Sorteo Académico</h1>
+        
+        <div class="row">
+            <div class="col-md-5">
+                {% block content %}{% endblock %}
+            </div>
+            
+            <div class="col-md-7">
+                {% block content2 %}{% endblock %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
