--- a/templates/sorteo/sorteo.html
+++ b/templates/sorteo/sorteo.html
@@ -46,8 +46,54 @@
         </div>
     </div>
     
-    <div class="modal fade" id="modalGanador" 
-        tabindex="-1" 
-        data-ganador="{% if ganador %}true{% else %}false{% endif %}">
-     </div>
+{% if ganador %}
+<div id="winner-overlay" style="
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    background: rgba(0,0,0,0.85);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;">
+
+    <div style="
+        width: 90%;
+        max-width: 600px;
+        height: 400px;
+        background-image: url('{% static 'img/anakin.gif' %}');
+        background-size: cover;
+        background-position: center;
+        border: 3px solid #ff0000;
+        box-shadow: 0 0 30px rgba(255,0,0,0.5);
+        position: relative;
+        display: flex;
+        flex-column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border-radius: 15px;
+        overflow: hidden;">
+
+        <div style="background: rgba(0,0,0,0.5); width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 20px;">
+            <h2 style="color: #ffc107; font-family: sans-serif; margin-bottom: 0;">EL ELEGIDO ES:</h2>
+            <h1 style="color: white; font-size: 3rem; font-weight: bold; text-transform: uppercase; text-shadow: 2px 2px 10px red;">
+                {{ ganador.nombre }} <br> {{ ganador.apellido }}
+            </h1>
+            
+            <a href="{% url 'seleccion:sortear' %}" style="
+                margin-top: 30px;
+                padding: 10px 25px;
+                background: #ff0000;
+                color: white;
+                text-decoration: none;
+                font-weight: bold;
+                border-radius: 5px;
+                border: 2px solid white;">
+                ACEPTAR DESTINO
+            </a>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock content2 %}
